fixed green button on mobile

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ a {
     background-color: #ccfabe;
     font-family: 'Pacifico', cursive;
     font-size: 60px;
-    padding: 0px 10px 0px 10px;
+    padding: 0 10px 0 10px;
     margin-bottom: 40px;
     
 }
@@ -445,6 +445,9 @@ main {
         font-size: 14px;
     }
     #linkpage i {
+        font-size: 30px;
+    }
+    #cbtn{
         font-size: 30px;
     }
 }
